# trait-ffi

./: Cargo.toml  README.md
example/interface/: Cargo.toml
example/interface/src/: aaa.rs  lib.rs
example/user/: Cargo.toml
example/user/src/: lib.rs
src/: lib.rs
