[package]
authors = ["Your Name <your.email@example.com>"]
categories = ["development-tools::procedural-macro-helpers"]
description = "一个用于获取使用过程宏的 crate 名称的 Rust 过程宏库"
documentation = "https://docs.rs/extern-trait"
edition = "2024"
keywords = ["proc-macro", "crate-name", "compile-time"]
license = "MIT"
name = "extern-trait"
repository = "https://github.com/yourusername/extern-trait"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0", features = ["full", "extra-traits"]}

[workspace]
members = [
  "example/*",
]
