[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["development-tools", "FFI"]
description = "A Rust procedural macro library for creating and implementing extern fn with Trait."
edition = "2024"
keywords = ["proc-macro", "abi", "trait", "extern"]
license = "MIT"
name = "extern-trait"
repository = "https://github.com/ZR233/extern-trait"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0", features = ["full", "extra-traits"]}

[workspace]
members = [
  "example/*",
]
