[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["development-tools"]
description = "A Rust procedural macro library for creating and implementing extern fn with Trait."
edition = "2024"
keywords = ["proc-macro", "abi", "trait", "extern"]
license = "MIT"
name = "trait-ffi"
repository = "https://github.com/ZR233/trait-ffi"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0", features = ["full", "extra-traits"]}

[workspace]
members = [
  "example/*",
]
